[metadata]
license_file = LICENSE

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_rpm]
release = 1
packager = Log2Timeline maintainers <log2timeline-maintainers@googlegroups.com>
doc_files = ACKNOWLEDGEMENTS
            AUTHORS
            LICENSE
            README
build_requires = python3-setuptools
requires = libbde-python3 >= 20140531
           libewf-python3 >= 20131210
           libfsapfs-python3 >= 20201107
           libfsext-python3 >= 20210424
           libfshfs-python3 >= 20201103
           libfsntfs-python3 >= 20200921
           libfsxfs-python3 >= 20201114
           libfvde-python3 >= 20160719
           libfwnt-python3 >= 20160418
           libluksde-python3 >= 20200101
           libmodi-python3 >= 20210405
           libqcow-python3 >= 20201213
           libsigscan-python3 >= 20191221
           libsmdev-python3 >= 20140529
           libsmraw-python3 >= 20140612
           libvhdi-python3 >= 20201014
           libvmdk-python3 >= 20140421
           libvsgpt-python3 >= 20210207
           libvshadow-python3 >= 20160109
           libvslvm-python3 >= 20160109
           python3-cffi >= 1.9.1
           python3-cryptography >= 2.0.2
           python3-dfdatetime >= 20210509
           python3-dtfabric >= 20170524
           python3-idna >= 2.5
           python3-pytsk3 >= 20210419
           python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1

