[metadata]
name = dfvfs
version = 20231208
description = Digital Forensics Virtual File System (dfVFS).
long_description = dfVFS, or Digital Forensics Virtual File System, provides read-only access to file-system objects from various storage media types and file formats. The goal of dfVFS is to provide a generic interface for accessing file-system objects, for which it uses several back-ends that provide the actual implementation of the various storage media types, volume systems and file systems.
long_description_content_type = text/plain
url = https://github.com/log2timeline/dfvfs
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  dfvfs = dfvfs
packages = find:
python_requires = >=3.7

[options.package_data]
dfvfs =
  lib/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_rpm]
release = 1
packager = Log2Timeline maintainers <log2timeline-maintainers@googlegroups.com>
doc_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
build_requires = python3-setuptools
requires =
  libbde-python3 >= 20220121
  libewf-python3 >= 20131210
  libfsapfs-python3 >= 20220709
  libfsext-python3 >= 20220829
  libfsfat-python3 >= 20220925
  libfshfs-python3 >= 20220831
  libfsntfs-python3 >= 20211229
  libfsxfs-python3 >= 20220829
  libfvde-python3 >= 20220121
  libfwnt-python3 >= 20210717
  libluksde-python3 >= 20220121
  libmodi-python3 >= 20210405
  libphdi-python3 >= 20220228
  libqcow-python3 >= 20201213
  libsigscan-python3 >= 20191221
  libsmdev-python3 >= 20140529
  libsmraw-python3 >= 20140612
  libvhdi-python3 >= 20201014
  libvmdk-python3 >= 20140421
  libvsapm-python3 >= 20230506
  libvsgpt-python3 >= 20211115
  libvshadow-python3 >= 20160109
  libvslvm-python3 >= 20160109
  python3-cffi >= 1.9.1
  python3-cryptography >= 2.0.2
  python3-dfdatetime >= 20221112
  python3-dtfabric >= 20220219
  python3-idna >= 2.5
  python3-pytsk3 >= 20210419
  python3-pyxattr >= 0.7.2
  python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1
