[metadata]
name = dfvfs
version = 20240317
description = Digital Forensics Virtual File System (dfVFS).
long_description = dfVFS, or Digital Forensics Virtual File System, provides read-only access to file-system objects from various storage media types and file formats. The goal of dfVFS is to provide a generic interface for accessing file-system objects, for which it uses several back-ends that provide the actual implementation of the various storage media types, volume systems and file systems.
long_description_content_type = text/plain
url = https://github.com/log2timeline/dfvfs
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  dfvfs = dfvfs
packages = find:
python_requires = >=3.8

[options.package_data]
dfvfs =
  lib/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_wheel]
universal = 1
